--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "apexcharts": "3.41.0",
     "bootstrap": "5.3.0",
     "bootstrap-icons": "1.10.5",
+    "date-fns": "^3.6.0",
     "history": "5.3.0",
     "node-sass": "9.0.0",
     "prop-types": "15.8.1",
