--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "6.12.1",
     "reactstrap": "^9.2.0",
     "sass": "1.63.2",
