--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-apexcharts": "1.4.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
+    "react-paginate": "^8.2.0",
+    "react-pagination": "^1.0.0",
     "react-router-dom": "6.12.1",
     "reactstrap": "^9.2.0",
     "sass": "1.63.2",
