--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
+    "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
+    "@toast-ui/react-editor": "^3.2.3",
     "apexcharts": "3.41.0",
     "axios": "^1.7.2",
     "bootstrap": "5.3.0",
